#15 Add tower attack
